# Marina-Costing

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
marina_costing/: api.py  hooks.py  install.py  modules.txt
marina_costing/config/: desktop.py
marina_costing/doctype/supplier_costing_packaging_line/: supplier_costing_packaging_line.json  supplier_costing_packaging_line.py
marina_costing/doctype/supplier_costing_quote/: supplier_costing_quote.js  supplier_costing_quote.py
marina_costing/doctype/supplier_costing_quote_line/: supplier_costing_quote_line.json  supplier_costing_quote_line.py
marina_costing/doctype/supplier_costing_size_line/: supplier_costing_size_line.json  supplier_costing_size_line.py
marina_costing/marina_costing/doctype/supplier_costing_packaging_line/: supplier_costing_packaging_line.json
marina_costing/marina_costing/doctype/supplier_costing_quote/: supplier_costing_quote.js  supplier_costing_quote.json  supplier_costing_quote.py  test_supplier_costing_quote.py
marina_costing/marina_costing/doctype/supplier_costing_quote_line/: supplier_costing_quote_line.json
marina_costing/marina_costing/doctype/supplier_costing_review_line/: supplier_costing_review_line.json  supplier_costing_review_line.py
marina_costing/marina_costing/module_def/marina_costing/: marina_costing.json
marina_costing/public/css/: marina_costing.css
marina_costing/www/: supplier-costing.html  supplier-costing.py
